camera alignment data analysis added

--- a/bin/origin-reader-AlignmentCamera.ipynb
+++ b/bin/origin-reader-AlignmentCamera.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E:\\CsPy\\Origin\\lib\n"
+      "E:\\Dropbox\\Research\\GitHub\\Origin\\lib\n"
      ]
     }
    ],
@@ -44,9 +44,9 @@
     "#fullBinPath  = os.path.abspath(os.getcwd() + \"/\" + sys.argv[0])\n",
     "#fullBasePath = os.path.dirname(os.path.dirname(fullBinPath))\n",
     "#fullLibPath  = os.path.join(fullBasePath, \"lib\")\n",
-    "fullLibPath='E:\\\\CsPy\\\\Origin\\\\lib'\n",
+    "fullLibPath='E:\\Dropbox\\Research\\GitHub\\Origin\\lib'\n",
     "#fullCfgPath  = os.path.join(fullBasePath, \"config\")\n",
-    "fullCfgPath='E:\\\\CsPy\\\\Origin\\\\config'\n",
+    "fullCfgPath='E:\\Dropbox\\Research\\GitHub\\Origin\\config'\n",
     "sys.path.append(fullLibPath)\n",
     "print fullLibPath\n",
     "from origin.client import server, random_data\n",
